
[package]
name = "arbitrage_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arbitrage_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = []
idl-build = ["anchor-lang/idl-build"]

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1"
solana-program = "^1.17.3"
spl-token = "=4.0.0"


