
[package]
name = "arbitrage_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arbitrage_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = []
# 网络与校验灵活性特性
# devnet: 使用 devnet 固定地址（如 Raydium CPMM authority），其余保持与客户端传入一致
devnet = []
flex = []
idl-build = ["anchor-lang/idl-build"]

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "=0.31.1"
anchor-spl = "=0.31.1"

 


